fixed issue with background image not showing up

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,7 +13,7 @@ main {
 }
 
 div.image {
-  background-image: url('/assets/images/halie-west.jpg');
+  background-image: url('/assets/images/leaf-picture.jpg');
   width: 50%;
   height: 100vh;
   background-repeat: no-repeat;
